lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:8: error: illegal start of simple expression
  	for (i <- 0 to Liste.length-2) {
        ^